# Kimera-RPGO

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
KimeraRPGO/: GenericSolver.cpp  GenericSolver.h  RobustSolver.cpp  RobustSolver.h  SolverParams.h  logger.h
KimeraRPGO/max_clique_finder/: findClique.h  findCliqueHeu.cpp  graphIO.h
KimeraRPGO/outlier/: CMakeLists.txt  OutlierRemoval.h  pcm.h
KimeraRPGO/outlier/tests/: CMakeLists.txt  testPcm.cpp  testPcmDoOptimize.cpp  testPcmSimple.cpp
KimeraRPGO/utils/: CMakeLists.txt  geometry_utils.h  graph_utils.cpp  graph_utils.h  type_utils.h
KimeraRPGO/utils/tests/: CMakeLists.txt  testPoseWithCovariance.cpp  testPoseWithNode.cpp  testTrajectory.cpp
RobustPGO/: CMakeLists.txt  GenericSolver.cpp  GenericSolver.h  OutlierRemoval.h  RobustPGO.cpp  RobustPGO.h  RobustSolver.cpp  RobustSolver.h  SolverParams.h  logger.h  robust_pgo.cpp  robust_pgo.h
RobustPGO/graph_utils/: CMakeLists.txt  graph_types.h  graph_utils.cpp  graph_utils.h  graph_utils_functions.cpp  graph_utils_functions.h
RobustPGO/graph_utils/tests/: testPoseWithCovariance.cpp  testTrajectory.cpp  testUtils.cpp
RobustPGO/max_clique_finder/: CMakeLists.txt  findClique.cpp  findClique.h  findCliqueHeu.cpp  graphIO.cpp  graphIO.h  utils.cpp
RobustPGO/outlier/: CMakeLists.txt  OutlierRemoval.h  pcm.h
RobustPGO/outlier/tests/: CMakeLists.txt  testForceProcess.cpp  testPcm.cpp  testPcmDist.cpp  testPcmDoOptimize.cpp  testPcmSimple.cpp
RobustPGO/pcm/: CMakeLists.txt  pcm.cpp  pcm.h  pcmDistance.h  pcm_distance.h
RobustPGO/pcm/tests/: CMakeLists.txt  testDoOptimize.cpp  testForceProcess.cpp  testPCM.cpp  testPcm.cpp
RobustPGO/utils/: CMakeLists.txt  geometry_utils.h  graph_utils.cpp  graph_utils.h  type_utils.h
RobustPGO/utils/tests/: CMakeLists.txt  testPoseWithCovariance.cpp  testPoseWithNode.cpp  testTrajectory.cpp  type_utils.h
cmake/: KimeraRPGOConfig.cmake.in  RobustPGOConfig.cmake.in  RobustPGOTargets.cmake  UnitTesting.cmake  clipper.CMakeLists.txt.in  kimera_rpgoConfig.cmake.in  pmc.CMakeLists.txt.in
examples/: Comparison.cpp  GenerateTrajectories.cpp  RpgoExample.cpp  RpgoReadG2o.cpp  RpgoReadG2oComparison.cpp  RpgoReadG2oIncremental.cpp  rpgo-g2o.cpp
include/KimeraRPGO/: GenericSolver.h  Logger.h  RobustSolver.h  SolverParams.h  logger.h
include/KimeraRPGO/max_clique_finder/: CMakeLists.txt  README.md  findClique.cpp  findClique.h  findCliqueHeu.cpp  graphIO.cpp  graphIO.h  utils.cpp
include/KimeraRPGO/outlier/: CMakeLists.txt  OutlierRemoval.h  Pcm.h  pcm.h
include/KimeraRPGO/utils/: CMakeLists.txt  GeometryUtils.h  LoadG2o.h  TypeUtils.h  geometry_utils.h  graph_utils.h  type_utils.h
include/RobustPGO/: robust_pgo.h
include/RobustPGO/graph_utils/: graph_utils_functions.h
include/RobustPGO/max_clique_finder/: graphIO.h
include/graph_utils/: graph_utils_functions.h
include/kimera_rpgo/: GenericSolver.h  RobustSolver.h  SolverParams.h  logger.h
include/kimera_rpgo/max_clique_finder/: CMakeLists.txt  findClique.cpp  findClique.h  graphIO.cpp  graphIO.h
include/kimera_rpgo/outlier/: CMakeLists.txt  OutlierRemoval.h  pcm.h
include/kimera_rpgo/utils/: CMakeLists.txt  geometry_utils.h  graph_utils.h  type_utils.h
include/logger/: logger.h
include/max_clique_finder/: findClique.h
install/: overlay.repos  underlay.repos
scripts/: generate_outliers.py  plot_results.py  process_g2o.py  utils.py  visualize.py  viz_utils.py
src/: GenericSolver.cpp  Logger.cpp  RobustSolver.cpp
src/RobustPGO/: robust_pgo.cpp
src/RobustPGO/graph_utils/: graph_utils_functions.cpp
src/RobustPGO/max_clique_finder/: findClique.cpp  findCliqueHeu.cpp  graphIO.cpp  utils.cpp
src/graph_utils/: graph_utils_functions.cpp
src/max_clique_finder/: findClique.cpp  findCliqueHeu.cpp  graphIO.cpp  utils.cpp
src/utils/: CMakeLists.txt  GraphUtils.cpp  graph_utils.cpp
tests/: CMakeLists.txt  testGnc.cpp  testIgnorePrefix.cpp  testLandmark.cpp  testLoadGraph.cpp  testMultiRobot.cpp  testMultirobotFrameAlign.cpp  testPcm.cpp  testPcmDoOptimize.cpp  testPcmSimple.cpp  testPoseWithCovariance.cpp  testPoseWithNode.cpp  testRemoveLastLoopClosure.cpp  testRemovePriorFactors.cpp  testTemporary.cpp  testTrajectory.cpp  test_config.h.in
tests/data/: ordered.g2o  robot_a.g2o  robot_b.g2o  unordered.g2o
