<?xml version="1.0"?>
<package format="2">
  <name>kimera_rpgo</name>
  <version>0.0.1</version>
  <description>A library for robust pose graph optimization using gtsam</description>

  <maintainer email="yunchang@mit.edu"></maintainer>
  <license>BSD</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gtsam</build_depend>

  <export>
    <!-- Specify that this is not really a catkin package-->
    <build_type>cmake</build_type>
  </export>
</package>

